src/objects/Scripts__c.object
<CustomObject>
    <description>Basic scripts for SA types to perform specific tasks or DML processes</description>
    <fields>
        <fullName>ApexCode__c</fullName>
        <label>ApexCode</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Documentation__c</fullName>
        <label>Documentation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>WhenToUse__c</fullName>
        <label>WhenToUse</label>
        <picklist>
            <picklistValues>
                <fullName>Anytime</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>After Sandbox Refresh or Creation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Script</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scripts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>